@@ -1,8 +1,11 @@
-2007-06-07  Isaiah Beerbower <ipaqag@tm.net>
+2007-06-11  Isaiah Beerbower <ipaqah@tm.net>
+	* PQFontSampleView.m ([-drawRect:]): Changed almost everything.
+
+2007-06-07  Isaiah Beerbower <ipaqah@tm.net>
 	* PQSampleController.m: Added method -updateControls, and call it from
 		-awakeFromNib so controls will be updated on startup.
 
-2007-06-07  Isaiah Beerbower <ipaqag@tm.net>
+2007-06-07  Isaiah Beerbower <ipaqah@tm.net>
 	* PQFontSampleView.*: Font sampling view to replace text view.
 	* PQSampleController.m: Changed to use PQFontSampleView instead of a text view.
 	* GNUmakefile: Makefile for GNUstep.
